# Ai_Test

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
include/math/: add.h  multiply.h
include/utils/: logger.h
src/: CMakeLists.txt
src/math/: CMakeLists.txt  add.cpp  multiply.cpp
src/utils/: CMakeLists.txt  logger.cpp
tests/: CMakeLists.txt  test_math.cpp
